# emforecaster

./: .env  .gitignore  README.md  exit  extra.py  main.py  pyproject.toml  requirements.txt  train.py
emforecaster/analysis/general/: analysis.py  plotting.py
emforecaster/analysis/neptune/: get_results.py
emforecaster/analysis/neptune/ablations/: patched_forecaster.yaml  patchtst.yaml  tsmixer.yaml
emforecaster/analysis/neptune/results/rf_emf/: patched_forecaster.csv
emforecaster/jobs/exp/rf_emf/baselines/cnn/: ablation.yaml  args.yaml
emforecaster/jobs/exp/rf_emf/baselines/lstm/: ablation.yaml  args.yaml
emforecaster/jobs/exp/rf_emf/baselines/mlp/: ablation.yaml  args.yaml
emforecaster/jobs/exp/rf_emf/baselines/transformer/: ablation.yaml  args.yaml
emforecaster/jobs/exp/rf_emf/dlinear/: ablation.yaml  args.yaml
emforecaster/jobs/exp/rf_emf/emforecaster/: ablation.yaml  args.yaml
emforecaster/jobs/exp/rf_emf/patchtst/: ablation.yaml  args.yaml
emforecaster/jobs/exp/rf_emf/tsmixer/: ablation.yaml  args.yaml
emforecaster/models/: patchtst.py
emforecaster/utils/: dataloading.py
